--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lint": "eslint \"src/**/*\"",
     "lint-fix": "eslint --fix \"src/**/*\"",
     "test": "jest --coverage || true",
-    "test:updateSnapshot": "jest --updateSnapshot --silent"
+    "test:updateSnapshot": "jest --updateSnapshot --silent",
+    "prepare": "husky install"
   },
   "license": "MIT",
   "dependencies": {
@@ -95,9 +96,12 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.3",
     "jest": "^27.3.1",
     "jest-transform-css": "^6.0.0",
+    "lint-staged": "^13.2.3",
     "nodemon": "^2.0.20",
+    "prettier": "^3.0.1",
     "process": "^0.11.10",
     "redux-mock-store": "^1.5.3",
     "style-loader": "^0.23.0",
@@ -108,5 +112,10 @@
     "webpack": "^5.20.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "lint-staged": {
+    "**/*.{js, ts}": [
+      "npm run lint"
+    ]
   }
 }
