--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
-    "tabWidth": 4,
-    "singleQuote": true,
-    "printWidth": 120,
     "bracketSpacing": true,
-}
+    "printWidth": 110,
+    "semi": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "arrowParens": "avoid",
+    "endOfLine": "lf"
+  }
