--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "start": "npm run build && npm run server",
     "dev-client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "dev-server": "cd src/server && tsc -p tsconfig.server.json --watch",
-    "lint": "eslint \"src/**/*\"",
+    "lint": "eslint . --ext .js --ext .ts",
     "lint-fix": "eslint --fix \"src/**/*\"",
     "test": "jest --coverage || true",
     "test:updateSnapshot": "jest --updateSnapshot --silent",
@@ -60,6 +60,8 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
     "@types/ajv": "^1.0.0",
     "@types/chalk": "^2.2.0",
     "@types/commander": "^2.12.2",
@@ -90,7 +92,7 @@
     "concurrently": "^6.3.0",
     "css-loader": "^4.0.0",
     "enzyme": "^3.10.0",
-    "eslint": "^7.16.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -101,7 +103,7 @@
     "jest-transform-css": "^6.0.0",
     "lint-staged": "^13.2.3",
     "nodemon": "^2.0.20",
-    "prettier": "^3.0.1",
+    "prettier": "3.0.1",
     "process": "^0.11.10",
     "redux-mock-store": "^1.5.3",
     "style-loader": "^0.23.0",
@@ -113,9 +115,13 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.11.1"
   },
+  "pre-commit": "lint-staged",
   "lint-staged": {
-    "**/*.{js, ts}": [
-      "npm run lint"
+    "*.{js, jsx,ts,tsx}": [
+      "eslint --quiet --fix"
+    ],
+    "*.{json,js,ts,jsx,tsx,html}": [
+      "prettier --write --ignore-unknown"
     ]
   }
 }
